[gd_scene load_steps=10 format=3 uid="uid://bye06dcblufnq"]

[ext_resource type="Script" path="res://start_menu/start_menu.gd" id="1_cf5y2"]
[ext_resource type="Texture2D" uid="uid://m1deevp2uy1r" path="res://start_menu/start_menu_background.png" id="2_rir57"]
[ext_resource type="Texture2D" uid="uid://c36fyo4fexc4a" path="res://start_menu/start_button.png" id="3_wecir"]
[ext_resource type="FontFile" uid="uid://g3q58jarv7nq" path="res://Pixeled.ttf" id="4_ux73k"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nbblv"]
atlas = ExtResource("3_wecir")
region = Rect2(0, 0, 124, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmsl2"]
atlas = ExtResource("3_wecir")
region = Rect2(124, 0, 124, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_jogvl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nbblv")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmsl2")
}],
"loop": true,
"name": &"hovered",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_woc58"]
size = Vector2(74.6667, 11.6667)

[sub_resource type="LabelSettings" id="LabelSettings_6uqa8"]
font = ExtResource("4_ux73k")

[node name="StartMenu" type="Node2D"]
position = Vector2(0, -20)
scale = Vector2(1.1, 1.1)
script = ExtResource("1_cf5y2")

[node name="Background" type="Sprite2D" parent="."]
scale = Vector2(7, 7)
texture = ExtResource("2_rir57")

[node name="StartButton" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 17)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_jogvl")

[node name="Area2D" type="Area2D" parent="StartButton"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartButton/Area2D"]
position = Vector2(0.333332, -6.5)
shape = SubResource("RectangleShape2D_woc58")

[node name="Label" type="Label" parent="."]
offset_left = -428.182
offset_top = -345.455
offset_right = -254.182
offset_bottom = -218.455
text = "Keys:
WASD/Arrows: Move
Q: Equip camera
E: Interact/use camera
F: Open/close album"
label_settings = SubResource("LabelSettings_6uqa8")

[connection signal="mouse_entered" from="StartButton/Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="StartButton/Area2D" to="." method="_on_area_2d_mouse_exited"]
